--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header class="page-header">
-        <a class="logo" href="index.html">
+        <a class="logo-header" href="index.html">
           <img class="page-header-logo" src="images/logo.svg" width="138" height="64" alt="Логотип Города Седоны">
         </a>
         <nav class="navigation">
@@ -26,17 +26,17 @@
             </li>
           </ul>
           <ul class="navigation-user">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#" </a>
-                <span class="visually-hidden">
-                  Поиск
-                </span>
+            <li class="navigation-item-5">
+              <a class="navigation-link" href="#"> </a>
+              <span class="visually-hidden">
+                Поиск
+              </span>
             </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#" </a>
-                <span class="visually-hidden">
-                  Понравилось
-                </span>
+            <li class="navigation-item-5">
+              <a class="navigation-link" href="#"> </a>
+              <span class="visually-hidden">
+                Понравилось
+              </span>
             </li>
             <li>
               <a class="navigation-link come_here" href="#">Хочу сюда</a>
@@ -57,7 +57,7 @@
               <h2 class="visually-hidden">Список услуг с фильтрами</h2>
               <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
                 <div class="catalog-help">
-                  <fieldset class="catalog-filter-group-1">
+                  <fieldset class="catalog-filter-group">
                     <legend class="catalog-filter-title">Инфраструктура:</legend>
                     <ul class="catalog-filter-list">
                       <li class="catalog-filter-item">
@@ -80,7 +80,7 @@
                       </li>
                   </fieldset>
 
-                  <fieldset class="catalog-filter-group-2">
+                  <fieldset class="catalog-filter-group">
                     <legend class="catalog-filter-title">Тип жилья:</legend>
                     <ul class="catalog-filter-list">
                       <li class="catalog-filter-item">
@@ -103,33 +103,39 @@
                       </li>
                   </fieldset>
                 </div>
-                <h3 class="advantages-title-price">Стоимость, ₽:</h3>
-                <input class="price-1" placeholder="От" type="number">
-                <input class="price-2" placeholder="До" type="number">
-                <button class="button-apply" type="submit">Применить</button>
-                <button class="button-throw_off" type="submit">Сбросить</button>
+                <div class="price-help-1">
+                  <h3 class="advantages-title-price">Стоимость, ₽:</h3>
+                  <div class="input-help">
+                    <input class="price" placeholder="От" type="number">
+                    <input class="price" placeholder="До" type="number">
+                  </div>
+                </div>
+                <div class="price-help-2">
+                  <button class="button-apply" type="submit">Применить</button>
+                  <button class="button-throw_off" type="submit">Сбросить</button>
+                </div>
               </form>
           </div>
         </div>
         <div class="selector">
-        <h3 class="inner-title">Найдено гостиниц: 38</h3>
-        <select class="select-control" aria-label="Сортировка">
-          <option value="popular">Сначала дешёвые</option>
-          <option value="cheap">Сначала популярные</option>
-          <option value="expensive">Сначала дорогие</option>
-        </select>
-        <div class="view">
-        <a href="#" class="button">
-          <span class="visually-hidden">Показать карточки</span>
-        </a>
-        <a href="#" class="button button-light">
-          <span class="visually-hidden">Показать все</span>
-        </a>
-        <a href="#" class="button button-light">
-          <span class="visually-hidden">Показать список</span>
-        </a>
-      </div>
-      </div>
+          <h3 class="inner-title">Найдено гостиниц: 38</h3>
+          <select class="select-control" aria-label="Сортировка">
+            <option value="popular">Сначала дешёвые</option>
+            <option value="cheap">Сначала популярные</option>
+            <option value="expensive">Сначала дорогие</option>
+          </select>
+          <div class="view">
+            <a href="#" class="button">
+              <span class="visually-hidden">Показать карточки</span>
+            </a>
+            <a href="#" class="button button-light">
+              <span class="visually-hidden">Показать все</span>
+            </a>
+            <a href="#" class="button button-light">
+              <span class="visually-hidden">Показать список</span>
+            </a>
+          </div>
+        </div>
         <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link" href="product.html">
@@ -142,7 +148,7 @@
             <div class="price-help">
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <a class="product-card-button button_favourites" href="#">в избранное</a>
-              </div>
+            </div>
           <li class="rating stars">
             <ul class="star">
               <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
@@ -168,7 +174,7 @@
             <div class="price-help">
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <a class="product-card-button button_favourites" href="#">в избранное</a>
-              </div>
+            </div>
           <li class="rating stars">
             <ul class="star">
               <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
@@ -192,8 +198,8 @@
             <span class="text-price">Гостиница</span>
             <span class="product-card-price">От 2500 ₽</span>
             <div class="price-help">
-            <a class="product-card-button button_detailed" href="#">подробнее</a>
-            <a class="product-card-button button_favourites" href="#">в избранное</a>
+              <a class="product-card-button button_detailed" href="#">подробнее</a>
+              <a class="product-card-button button_favourites" href="#">в избранное</a>
             </div>
           <li class="rating stars">
             <ul class="star">
@@ -216,8 +222,8 @@
             <span class="text-price">Гостиница</span>
             <span class="product-card-price">От 1500 ₽</span>
             <div class="price-help">
-            <a class="product-card-button button_detailed" href="#">подробнее</a>
-            <a class="product-card-button button_favourites" href="#">в избранное</a>
+              <a class="product-card-button button_detailed" href="#">подробнее</a>
+              <a class="product-card-button button_favourites" href="#">в избранное</a>
             </div>
           <li class="rating stars">
             <ul class="star">
@@ -230,39 +236,41 @@
           <span class="text-rating">Рейтинг: 5,0</span>
           </li>
         </ul>
-        <ul class="pagination">
-          <li class="pagination-item">
-            <a class="pagination-link pagination-current">1</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">2</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">3</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">4</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">...</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">10</a>
-          </li>
-        </ul>
+        <div class="pagination-container">
+          <ul class="pagination">
+            <li class="pagination-item">
+              <a class="pagination-link pagination-current">1</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">2</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">3</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">4</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link pagination-current" href="#">...</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">10</a>
+            </li>
+          </ul>
+        </div>
         </section>
         <section class="newsletter-catalog">
           <h2 class="page-main-title-catalog">Подпишитесь на рассылку</h2>
-          <p class="text-newsletter-catalog">Только полезная информация и никакого спама,<br> честное бойскаутское!
-            </br<< /p>
+          <p class="text-newsletter-catalog">Только полезная информация и никакого спама,честное бойскаутское!
+          </p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post"></form>
           <div class="help-newsletter">
-          <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
-            required>
-          <button class="button newsletter-button" type="submit">
-            Подписаться
-          </button>
-        </div>
+            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+              required>
+            <button class="button newsletter-button" type="submit">
+              Подписаться
+            </button>
+          </div>
         </section>
       </main>
       <footer class="page-footer">
@@ -270,16 +278,19 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a class="button" href="https://vk.com/htmlacademy">
+                <img class="footer-icon" src="images/vk.svg" width="24" height="14" alt="ВКонтакте">
                 <span class="visually-hidden">ВКонтакте</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href=" https://t.me/htmlacademy">
+                <img class="footer-icon" src="images/tg.svg" width="24" height="14" alt="Телеграм">
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button" href=" https://www.youtube.com/user/htmlacademyru">
+                <img class="footer-icon" src="images/youtube.svg" width="24" height="14" alt="Ютуб">
                 <span class="visually-hidden">Ютуб</span>
               </a>
             </li>
