--- a/catalog.html
+++ b/catalog.html
@@ -143,97 +143,79 @@
                 alt="Amara Resort & Spa">
               <h4 class="product-card-title">Amara Resort & Spa</h4>
             </a>
-            <span class="text-price">Гостиница</span>
-            <span class="product-card-price">От 4000 ₽</span>
             <div class="price-help">
+              <span class="text-price">Гостиница</span>
+              <span class="product-card-price">От 4000 ₽</span>
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <a class="product-card-button button_favourites" href="#">в избранное</a>
+              <div class="stars">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </div>
+              <span class="text-rating">Рейтинг: 8,5</span>
             </div>
-          <li class="rating stars">
-            <ul class="star">
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-            </ul>
           </li>
-          <span class="text-rating">Рейтинг: 8,5</span>
-          </li>
+
           <li class="product-card">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="images/villas_at_poco_diablo.jpg" width="300" height="212"
                 alt="Villas at Poco Diablo">
               <h4 class="product-card-title">Villas at Poco Diablo</h4>
             </a>
-            <span class="text-price">Гостиница</span>
-            <span class="product-card-price">От 5000 ₽</span>
             <div class="price-help">
+              <span class="text-price">Гостиница</span>
+              <span class="product-card-price">От 5000 ₽</span>
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <a class="product-card-button button_favourites" href="#">в избранное</a>
+              <div class="stars">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </div>
+              <span class="text-rating">Рейтинг: 9,2</span>
             </div>
-          <li class="rating stars">
-            <ul class="star">
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-            </ul>
           </li>
-          <span class="text-rating">Рейтинг: 9,2</span>
-          </li>
+
           <li class="product-card">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="images/desert_quail_inn.jpg" width="300" height="212"
                 alt="Desert Quail Inn">
               <h4 class="product-card-title">Desert Quail Inn</h4>
             </a>
-            <span class="text-price">Гостиница</span>
-            <span class="product-card-price">От 2500 ₽</span>
             <div class="price-help">
+              <span class="text-price">Гостиница</span>
+              <span class="product-card-price">От 2500 ₽</span>
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <a class="product-card-button button_favourites" href="#">в избранное</a>
+              <div class="stars">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </div>
+              <span class="text-rating">Рейтинг: 6,9</span>
             </div>
-          <li class="rating stars">
-            <ul class="star">
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-            </ul>
           </li>
-          <span class="text-rating">Рейтинг: 6,9</span>
-          </li>
+
           <li class="product-card">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="images/greentree_inn.jpg" width="300" height="212"
                 alt="GreenTree Inn">
               <h4 class="product-card-title">GreenTree Inn</h4>
             </a>
-            <span class="text-price">Гостиница</span>
-            <span class="product-card-price">От 1500 ₽</span>
             <div class="price-help">
+              <span class="text-price">Гостиница</span>
+              <span class="product-card-price">От 1500 ₽</span>
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <a class="product-card-button button_favourites" href="#">в избранное</a>
+              <div class="stars">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </div>
+              <span class="text-rating">Рейтинг: 5,0</span>
             </div>
-          <li class="rating stars">
-            <ul class="star">
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-              </li>
-            </ul>
-          </li>
-          <span class="text-rating">Рейтинг: 5,0</span>
           </li>
         </ul>
         <div class="pagination-container">
